Bug correction with MI, Added Validation set for FSSD and prediction tasks. Correct hyperparametrisation and no more problem of saturation

--- a/General_framework.ipynb
+++ b/General_framework.ipynb
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10e27cbb-7db5-4207-ab93-3c4b12ce60ae",
+   "id": "5a93deff-8bac-429d-a680-baec27edfedc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
     "dataset_name = \"MackeyGlass\"\n",
     "step_ahead=5\n",
     "\n",
-    "is_multivariate, sampling_rate, X_train, X_test, Y_train, Y_test, X_pretrain = load_dataset_prediction(dataset_name, step_ahead, visualize=True)\n"
+    "is_multivariate, sampling_rate, X_train, X_val, X_test, Y_train, Y_val, Y_test, X_pretrain = load_dataset_prediction(dataset_name, step_ahead, visualize=True)\n"
    ]
   },
   {
@@ -164,8 +164,15 @@
   },
   {
    "cell_type": "raw",
-   "id": "6f011074-4312-44d8-8e28-49f96646fe9c",
+   "id": "833047f2-bd3c-4c20-b8ba-948c49b45f70",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-04-04T13:04:44.814568Z",
+     "iopub.status.busy": "2024-04-04T13:04:44.814264Z",
+     "iopub.status.idle": "2024-04-04T13:04:46.389045Z",
+     "shell.execute_reply": "2024-04-04T13:04:46.387745Z",
+     "shell.execute_reply.started": "2024-04-04T13:04:44.814553Z"
+    },
     "scrolled": true
    },
    "source": [
@@ -173,7 +180,7 @@
     "is_instances_classification = True\n",
     "dataset_name = \"JapaneseVowels\"\n",
     "\n",
-    "is_multivariate, sampling_rate, X_train, X_test, Y_train, Y_test, X_pretrain = load_dataset_classification(dataset_name)"
+    "is_multivariate, sampling_rate, X_train, X_val, X_test, Y_train, Y_val, Y_test, X_pretrain = load_dataset_classification(dataset_name)"
    ]
   },
   {
@@ -225,9 +232,6 @@
    },
    "outputs": [],
    "source": [
-    "import datasets.multivariate_generation\n",
-    "reload(datasets.multivariate_generation)\n",
-    "\n",
     "from datasets.multivariate_generation import extract_peak_frequencies\n",
     "\n",
     "if is_multivariate:\n",
@@ -298,30 +302,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Concatenate train and test arrays for plotting\n",
-    "combined_data = np.concatenate((X_train_band, X_test_band), axis=0)\n",
-    "combined_Y =np.concatenate((Y_train, Y_test), axis=0)\n",
-    "\n",
-    "# Calculate the merge point index\n",
-    "merge_point_index = X_train_band.shape[0]\n",
-    "\n",
-    "# Define the range around the merge point to plot\n",
-    "start_index = merge_point_index - 100\n",
-    "end_index = merge_point_index + 100\n",
-    "steps = range(start_index, end_index)\n",
-    "\n",
-    "print(start_index, end_index)\n",
-    "# Plot for a subset N features within a range arround transition from train to test\n",
-    "N = 3\n",
-    "plt.figure(figsize=(16, 5))\n",
-    "for i in [1, 8, 15]: \n",
-    "    plt.plot(steps, combined_data[steps, i], label=f'Feature {i}')\n",
-    "plt.plot(steps, combined_Y[steps], label=\"Prediction\")\n",
-    "plt.title('Feature Values Around Merge Point')\n",
-    "plt.xlabel('Sample Index')\n",
-    "plt.ylabel('Feature Value')\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "if not is_instances_classification:\n",
+    "    # Concatenate train and test arrays for plotting\n",
+    "    combined_data = np.concatenate((X_train_band, X_test_band), axis=0)\n",
+    "    combined_Y =np.concatenate((Y_train, Y_test), axis=0)\n",
+    "    \n",
+    "    # Calculate the merge point index\n",
+    "    merge_point_index = X_train_band.shape[0]\n",
+    "    \n",
+    "    # Define the range around the merge point to plot\n",
+    "    start_index = merge_point_index - 100\n",
+    "    end_index = merge_point_index + 100\n",
+    "    steps = range(start_index, end_index)\n",
+    "    \n",
+    "    print(start_index, end_index)\n",
+    "    # Plot for a subset N features within a range arround transition from train to test\n",
+    "    N = 3\n",
+    "    plt.figure(figsize=(16, 5))\n",
+    "    for i in [1, 8, 15]: \n",
+    "        plt.plot(steps, combined_data[steps, i], label=f'Feature {i}')\n",
+    "    plt.plot(steps, combined_Y[steps], label=\"Prediction\")\n",
+    "    plt.title('Feature Values Around Merge Point')\n",
+    "    plt.xlabel('Sample Index')\n",
+    "    plt.ylabel('Feature Value')\n",
+    "    plt.legend()\n",
+    "    plt.show()"
    ]
   },
   {
@@ -446,17 +451,17 @@
     "weights = np.repeat(1.0, window_size)/window_size\n",
     "ma = np.array([np.convolve(d, weights, 'valid') for d in (filtered_data)])\n",
     "\n",
-    "END = 1500\n",
-    "START = 1000\n",
+    "START = 0\n",
+    "END = 1000\n",
     "DIFF = END - START\n",
     "#CPlot the two for different frequencies\n",
-    "NB_1 = 1\n",
+    "NB_1 = 0\n",
     "fig, ax = plt.subplots(3, 1, figsize=(24,18))\n",
     "ax[0].plot(range(DIFF), filtered_data[NB_1, START:END], label='Time serie')\n",
     "ax[0].plot(range(DIFF), ma[NB_1, START:END], label='Moving average')\n",
     "ax[0].legend(fontsize=26)\n",
     "\n",
-    "NB_2 = 16\n",
+    "NB_2 = 4\n",
     "ax[1].plot(range(DIFF), filtered_data[NB_2, START:END], label='Time serie')\n",
     "ax[1].plot(range(DIFF), ma[NB_2, START:END], label='Moving average')\n",
     "\n",
@@ -468,7 +473,7 @@
     "    ax.spines['top'].set_visible(False)\n",
     "    ax.spines['right'].set_visible(False)\n",
     "    ax.tick_params(axis='both', labelsize=26)\n",
-    "    # draw vertical lines to represent the window for some points\n",
+    "    # draw vertical lines to show the window_size\n",
     "    for x in range(100, 500, 100):\n",
     "        ax.axvspan(x, x + window_size, color='g', alpha=0.2)\n",
     "\n",
@@ -549,7 +554,7 @@
     "from reservoir.activation_functions import tanh, heaviside, sigmoid\n",
     "\n",
     "# the activation function choosen for the rest of the experiment\n",
-    "# activation_function = lambda x : sigmoid(2*(x-0.5))\n",
+    "# activation_function = lambda x : sigmoid(2*(x-0.5))tanh(x)\n",
     "activation_function = lambda x : tanh(x)\n",
     "\n",
     "plt.plot(np.linspace(0, 1.1, 100), activation_function(np.linspace(0, 1.1, 100)))\n",
@@ -655,6 +660,23 @@
     "\n",
     "if not is_multivariate:\n",
     "    X_pretrain_noisy = X_pretrain + np.random.normal(0, noise_std, X_pretrain.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "458f8539-a4e3-43f9-bd72-ec383324fc78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from connexion_generation.mi_utility import compute_mutual_information\n",
+    "\n",
+    "W_mi = compute_mutual_information(np.array(filtered_data)[:, 200:400], [np.arange(common_xtrain_size), np.arange(common_xtrain_size)])\n",
+    "\n",
+    "from matplotlib.colors import ListedColormap\n",
+    "\n",
+    "custom_colormap = ListedColormap(np.vstack((plt.cm.cividis(0.0), plt.cm.cividis(np.linspace(0.5, 1, 128)))))\n",
+    "heatmap(W_mi, cmap=custom_colormap, cbar=True)"
    ]
   },
   {
@@ -778,7 +800,7 @@
     "    for ts in X_test_band:\n",
     "        # Add noise to the time series\n",
     "        X_test_band_noisy.append(ts + np.random.normal(loc=0, scale=noise_std, size=ts.shape))\n",
-    "    X_test_band_noisy = np.array(X_test_band_noisy)\n"
+    "    X_test_band_noisy = np.array(X_test_band_noisy)"
    ]
   },
   {
@@ -800,7 +822,7 @@
     "    X_train_band_duplicated = np.repeat(np.squeeze(np.array(X_train_band)), K, axis=1)\n",
     "    X_test_band_duplicated = np.repeat(np.squeeze(np.array(X_test_band)), K, axis=1)\n",
     "    X_train_band_noisy_duplicated = np.repeat(np.squeeze(np.array(X_train_band_noisy)), K, axis=1)\n",
-    "    X_test_band_noisy_duplicated = np.repeat(np.squeeze(np.array(X_test_band_noisy)), K, axis=1)\n"
+    "    X_test_band_noisy_duplicated = np.repeat(np.squeeze(np.array(X_test_band_noisy)), K, axis=1)"
    ]
   },
   {
@@ -846,21 +868,23 @@
    },
    "outputs": [],
    "source": [
-    "TIME_INCREMENT = int(min_window_size+1)\n",
-    "MAX_TIME_INCREMENT = int(max_window_size) #int(max_window_size) or None\n",
+    "TIME_INCREMENT = 100 # int(max_window_size) or int(min_window_size+1)\n",
+    "MAX_TIME_INCREMENT = TIME_INCREMENT #int(max_window_size) or None  or TIME_INCREMENT\n",
     "WEIGHT_INCREMENT = 0.05\n",
     "target_rate = 0.8\n",
     "RATE_SPREAD = 0.1\n",
     "\n",
-    "min_variance = 0.5\n",
-    "max_variance = 0.9\n",
+    "min_variance = 0.004\n",
+    "max_variance = 0.01\n",
     "\n",
-    "bias_scaling = 0.35\n",
-    "input_scaling = 0.05\n",
+    "bias_scaling = 0.01\n",
+    "input_scaling = 0.01\n",
     "leaky_rate = 1\n",
     "\n",
-    "if max_window_size <= TIME_INCREMENT or  TIME_INCREMENT <= min_window_size:\n",
-    "    raise ValueError(f\"INCREMENT must be greater than {min_window_size} and smaller than {max_window_size}. Current INCREMENT is {INCREMENT}.\")\n"
+    "if int(max_window_size) < TIME_INCREMENT or TIME_INCREMENT < min_window_size:\n",
+    "    raise ValueError(f\"INCREMENT must be greater than {min_window_size} and smaller than {max_window_size}. Current INCREMENT is {TIME_INCREMENT}.\")\n",
+    "\n",
+    "TIME_INCREMENT"
    ]
   },
   {
@@ -903,14 +927,38 @@
     "    #W, state_history = run_hadsp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
     "    #                       target_rate, RATE_SPREAD, max_increment=MAX_TIME_INCREMENT, mi_based=False, visualize=visualize)\n",
     "\n",
-    "    W, state_history = run_desp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
+    "    W, state_history, variance_history = run_desp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
     "                        min_variance, max_variance, max_increment=MAX_TIME_INCREMENT, mi_based=True, n_jobs = 12, visualize=visualize)\n",
     "\n",
     "    connectivity =  W.count_nonzero() / (W.shape[0] * W.shape[1])\n",
     "    eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "    sr = max(abs(eigen))\n",
     "    \n",
-    "    return Win, W, bias, connectivity, sr, state_history\n"
+    "    return Win, W, bias, connectivity, sr, state_history, variance_history\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89500f15-9959-4dcf-afbf-f6ca24364343",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(30,14))\n",
+    "plt.suptitle(f'Dynamics', fontsize=16)\n",
+    "\n",
+    "# NEURON ACTIVITY PLOT \n",
+    "ax0 = plt.subplot2grid((4, 3), (0, 0), colspan=3, rowspan=2)\n",
+    "random_neurons_indices =  np.sort(np.random.randint(RESERVOIR_SIZE, size=11)) #Size max is 19 because there is not enough colors\n",
+    "colors = color_palette(\"tab20\")\n",
+    "# NUMBER_OF_STEP_TO_WATCH \n",
+    "WATCH_FROM = 700\n",
+    "WATCH_TO = 1000\n",
+    "x =range(WATCH_FROM, WATCH_TO)\n",
+    "j = 0\n",
+    "for i in random_neurons_indices:\n",
+    "    ax0.plot(x, X_pretrain_multi.A[i][x], label=str(i), color=colors[j])\n",
+    "    j += 1\n"
    ]
   },
   {
@@ -945,7 +993,8 @@
     " bias_hadsp_multi, \n",
     " connectivity_band, \n",
     " sr_hadsp_multi, \n",
-    " state_history_hadsp_multi) = initialise_and_train(input_scaling, n, input_connectivity, connectivity, bias_scaling, SEED, X_pretrain_multi)\n",
+    " state_history_hadsp_multi,\n",
+    " variance_history) = initialise_and_train(input_scaling, n, input_connectivity, connectivity, bias_scaling, SEED, X_pretrain_multi)\n",
     "\n",
     "# random + multi\n",
     "Win_random_multi, W_random_multi, bias_random_multi =  init_matrices(n, 1, connectivity_band, sr_hadsp_multi)\n",
@@ -959,6 +1008,59 @@
     "\n",
     "custom_colormap = ListedColormap(np.vstack((plt.cm.cividis(0.0), plt.cm.cividis(np.linspace(0.5, 1, 128)))))\n",
     "heatmap(W_random_multi.todense(), cmap=custom_colormap, cbar=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22be4078-9172-48f0-b39f-9b9c634c136e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(30,14))\n",
+    "plt.suptitle(f'Dynamics', fontsize=16)\n",
+    "\n",
+    "# NEURON ACTIVITY PLOT\n",
+    "ax0 = plt.subplot2grid((4, 3), (0, 0), colspan=3, rowspan=2)\n",
+    "random_neurons_indices =  np.sort(np.random.randint(RESERVOIR_SIZE, size=19)) #Size max is 19 because there is not enough colors\n",
+    "random_neurons_indices = np.append(random_neurons_indices, 51)\n",
+    "colors = color_palette(\"tab20\")\n",
+    "# NUMBER_OF_STEP_TO_WATCH \n",
+    "WATCH_FROM = 0\n",
+    "WATCH_TO = 4000\n",
+    "neurons_evolution = np.array(variance_history)[WATCH_FROM:WATCH_TO]\n",
+    "x =range(len(state_history_hadsp_multi))[WATCH_FROM:WATCH_TO]\n",
+    "j = 0\n",
+    "for i in random_neurons_indices:\n",
+    "    ax0.plot(x, neurons_evolution[: ,i], label=str(i), color=colors[j])\n",
+    "    ax0.text(-3+WATCH_FROM, neurons_evolution[0, i],  str(i), color=\"black\", fontsize=12)\n",
+    "    j += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2eef5f04-6a58-46eb-a958-3937fa36947a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(30,14))\n",
+    "plt.suptitle(f'Dynamics', fontsize=16)\n",
+    "\n",
+    "# NEURON ACTIVITY PLOT \n",
+    "ax0 = plt.subplot2grid((4, 3), (0, 0), colspan=3, rowspan=2)\n",
+    "random_neurons_indices =  np.sort(np.random.randint(RESERVOIR_SIZE, size=1)) #Size max is 19 because there is not enough colors\n",
+    "colors = color_palette(\"tab20\")\n",
+    "# NUMBER_OF_STEP_TO_WATCH \n",
+    "WATCH_FROM = 0\n",
+    "WATCH_TO = 4000\n",
+    "neurons_evolution = np.array(state_history_hadsp_multi)[WATCH_FROM:WATCH_TO]\n",
+    "x =range(len(state_history_hadsp_multi))[WATCH_FROM:WATCH_TO]\n",
+    "j = 0\n",
+    "for i in random_neurons_indices:\n",
+    "    ax0.plot(x, neurons_evolution[: ,i], label=str(i), color=colors[j])\n",
+    "    ax0.text(-3+WATCH_FROM, neurons_evolution[0, i],  str(i), color=\"black\", fontsize=12)\n",
+    "    j += 1\n"
    ]
   },
   {
@@ -999,7 +1101,8 @@
     "     bias_hadsp_uni, \n",
     "     connectivity_hadsp_uni, \n",
     "     sr_hadsp_uni,\n",
-    "     state_history_hadsp_uni) = initialise_and_train(input_scaling, n,  input_connectivity, connectivity, bias_scaling, SEED, X_pretrain_uni)\n",
+    "     state_history_hadsp_uni,\n",
+    "     _) = initialise_and_train(input_scaling, n, input_connectivity, connectivity, bias_scaling, SEED, X_pretrain_uni)\n",
     "    \n",
     "    # random + uni\n",
     "    Win_normal, W_normal, bias_normal = init_matrices(n, 1, connectivity_hadsp_uni, sr_hadsp_uni)\n",
@@ -1057,14 +1160,14 @@
   },
   {
    "cell_type": "raw",
-   "id": "c4481df8-f0d7-4700-83a2-6be67905de53",
+   "id": "41d2e41f-cbfd-493e-bad0-bbb651ca46e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-20T12:38:56.644118Z",
-     "iopub.status.busy": "2024-03-20T12:38:56.643503Z",
-     "iopub.status.idle": "2024-03-20T12:38:56.655041Z",
-     "shell.execute_reply": "2024-03-20T12:38:56.654221Z",
-     "shell.execute_reply.started": "2024-03-20T12:38:56.644080Z"
+     "iopub.execute_input": "2024-03-21T15:00:13.802481Z",
+     "iopub.status.busy": "2024-03-21T15:00:13.801956Z",
+     "iopub.status.idle": "2024-03-21T15:00:13.813032Z",
+     "shell.execute_reply": "2024-03-21T15:00:13.812057Z",
+     "shell.execute_reply.started": "2024-03-21T15:00:13.802451Z"
     }
    },
    "source": [
@@ -1165,6 +1268,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d7e344e-de91-4709-bfce-467b1d049546",
+   "metadata": {},
+   "source": [
+    "#### noisy "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fd3dc743-36c8-4821-948d-f14f43af8104",
@@ -1178,10 +1289,18 @@
     "test_data_multi = X_test_band_noisy_duplicated # X_test_band_noisy_duplicated or X_test_band_duplicated\n",
     "\n",
     "Y_pred_hadsp_multi = predict_model_for_classification(reservoir_hadsp_multi, readout_hadsp_multi, test_data_multi, N_JOBS)\n",
-    "score = compute_score(Y_pred_hadsp_multi, Y_test, \"HADSP multi\", verbosity=1)\n",
+    "score = compute_score(Y_pred_hadsp_multi, Y_test, is_instances_classification, \"HADSP multi\", verbosity=1)\n",
     "\n",
     "Y_pred_random_multi = predict_model_for_classification(reservoir_random_multi, readout_random_multi, test_data_multi, N_JOBS)\n",
-    "score = compute_score(Y_pred_random_multi, Y_test, \"random multi\", verbosity=1)"
+    "score = compute_score(Y_pred_random_multi, Y_test, is_instances_classification, \"random multi\", verbosity=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6287d16-2f61-4d2a-97e3-0a0844918879",
+   "metadata": {},
+   "source": [
+    "#### normal"
    ]
   },
   {
@@ -1195,10 +1314,10 @@
     "test_data_multi = X_test_band_duplicated # X_test_band_noisy_duplicated or X_test_band_duplicated\n",
     "\n",
     "Y_pred_hadsp_multi = predict_model_for_classification(reservoir_hadsp_multi, readout_hadsp_multi, test_data_multi, -1)\n",
-    "score = compute_score(Y_pred_hadsp_multi, Y_test, \"HADSP multi\", verbosity=1)\n",
+    "score = compute_score(Y_pred_hadsp_multi, Y_test, is_instances_classification, \"HADSP multi\", verbosity=1)\n",
     "\n",
     "Y_pred_random_multi = predict_model_for_classification(reservoir_random_multi, readout_random_multi, test_data_multi, N_JOBS)\n",
-    "score = compute_score(Y_pred_random_multi, Y_test, \"random multi\", verbosity=1)"
+    "score = compute_score(Y_pred_random_multi, Y_test, is_instances_classification, \"random multi\", verbosity=1)"
    ]
   },
   {
@@ -1431,7 +1550,7 @@
     "print(\"nrmse random + band  :\", compute_score(Y_test[slice_range], y_pred_random_multi[slice_range], is_instances_classification))\n",
     "print(\"nrmse hadsp + band   :\", compute_score(Y_test[slice_range], y_pred_hadsp_multi[slice_range], is_instances_classification))\n",
     "\n",
-    "plot_results(y_pred_random_multi, Y_test, 0, 300)\n"
+    "plot_results(y_pred_hadsp_multi, Y_test, 0, 300)\n"
    ]
   },
   {
@@ -1562,7 +1681,9 @@
   {
    "cell_type": "markdown",
    "id": "0b27da37",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Analysis"
    ]
@@ -1810,7 +1931,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
