--- a/Hyperparameter optimisation.ipynb
+++ b/Hyperparameter optimisation.ipynb
@@ -126,13 +126,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74976676-60bc-428e-b34f-f8d1eb610207",
+   "cell_type": "markdown",
+   "id": "e5c17065-e9f3-4af5-b48c-7d77fb2d415e",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-04-04T09:59:16.044618Z",
+     "iopub.status.busy": "2024-04-04T09:59:16.044453Z",
+     "iopub.status.idle": "2024-04-04T09:59:17.104161Z",
+     "shell.execute_reply": "2024-04-04T09:59:17.103898Z",
+     "shell.execute_reply.started": "2024-04-04T09:59:16.044610Z"
+    },
     "scrolled": true
    },
-   "outputs": [],
    "source": [
     "from datasets.load_datasets import load_dataset_prediction\n",
     "is_instances_classification = False\n",
@@ -167,15 +172,17 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "5bde55ea-5b91-41fa-87e0-8c0d19ee9e4c",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2999e329-f417-463e-b94b-2dd989c26177",
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
    "source": [
     "from datasets.load_datasets import load_dataset_classification\n",
     "is_instances_classification = True\n",
-    "dataset_name = \"FSDD\"\n",
+    "dataset_name = \"JapaneseVowels\"\n",
     "\n",
     "is_multivariate, sampling_rate, X_train, X_test, Y_train, Y_test, X_pretrain = load_dataset_classification(dataset_name)"
    ]
@@ -815,31 +822,41 @@
     "END_STEP = 500\n",
     "slice_range = slice(START_STEP, END_STEP)\n",
     "\n",
-    "function_name = \"desp\" # \"desp\" ou \"hadsp\"\n",
+    "function_name = \"hadsp\" # \"desp\" ou \"hadsp\"\n",
+    "data_type = \"noisy\" # \"normal\" ou \"noisy\"\n",
     "\n",
     "def objective(trial):\n",
     "    # Suggest values for the parameters you want to optimize\n",
-    "    input_scaling = trial.suggest_float('input_scaling', 0.01, 1.0, step=0.01)\n",
-    "    bias_scaling = trial.suggest_float('bias_scaling', 0, 1, step=0.05)\n",
+    "    # COMMON\n",
+    "    input_scaling = trial.suggest_float('input_scaling', 0.01, 0.2, step=0.01)\n",
+    "    bias_scaling = trial.suggest_float('bias_scaling', 0, 0.2, step=0.01)\n",
     "    leaky_rate = trial.suggest_float('leaky_rate', 1, 1)\n",
     "    connectivity = trial.suggest_float('connectivity', 0, 0)\n",
     "    input_connectivity = trial.suggest_float('input_connectivity', 1, 1)\n",
     "    network_size = trial.suggest_float('network_size', RESERVOIR_SIZE, RESERVOIR_SIZE)\n",
-    "    TIME_INCREMENT = int(min_window_size+1)\n",
-    "    MAX_TIME_INCREMENT = int(max_window_size) #int(max_window_size) or None\n",
     "    weight_increment = trial.suggest_float('weight_increment', 0.01, 0.5, step=0.01)\n",
-    "    \n",
-    "    #target_rate = trial.suggest_float('target_rate', 0.5, 1, step=0.01)\n",
-    "    #rate_spread = trial.suggest_float('rate_spread', 0.01, target_rate, step=0.01)\n",
-    "    min_variance = trial.suggest_float('min_variance', 0.05, 0.9, step=0.01)\n",
-    "    max_variance = trial.suggest_float('max_variance', min_variance, 1, step=0.01)\n",
-    "    \n",
+    "\n",
     "    ridge = trial.suggest_int('ridge', -10, 1)\n",
     "    RIDGE_COEF = 10**ridge\n",
     "\n",
+    "    # HADSP\n",
+    "    if function_name == \"hadsp\":\n",
+    "        target_rate = trial.suggest_float('target_rate', 0.5, 1, step=0.01)\n",
+    "        rate_spread = trial.suggest_float('rate_spread', 0.01, 0.4, step=0.01)\n",
+    "        TIME_INCREMENT = int(min_window_size+1) # int(min_window_size+1) or int(max_window_size)\n",
+    "        MAX_TIME_INCREMENT = int(max_window_size) #int(max_window_size) or None or TIME_INCREMENT\n",
+    "    # DESP\n",
+    "    else:\n",
+    "        min_variance = trial.suggest_float('min_variance', 0.001, 0.01, step=0.001)\n",
+    "        variance_window = trial.suggest_float('variance_window', 0.01, 0.02, step=0.005)\n",
+    "        max_variance = min_variance + variance_window\n",
+    "        TIME_INCREMENT = 100 # int(min_window_size+1) or int(max_window_size)\n",
+    "        MAX_TIME_INCREMENT = TIME_INCREMENT #int(max_window_size) or None or TIME_INCREMENT\n",
+    "\n",
     "    pretrain_data_multi = X_pretrain_multi\n",
     "    train_data_multi = X_train_band_duplicated # X_train_band_noisy_duplicated or X_train_band_duplicated\n",
-    "    test_data_multi = X_test_band_noisy_duplicated # X_test_band_noisy_duplicated or X_test_band_duplicated\n",
+    "    test_data_multi = X_test_band_noisy_duplicated if data_type == \"noisy\" else X_test_band_duplicated\n",
+    "\n",
     "\n",
     "    \n",
     "    def initialise_and_train(input_scaling, n, input_connectivity, connectivity, bias_scaling, training_set, visualize=False):\n",
@@ -851,8 +868,8 @@
     "            W, state_history = run_hadsp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, weight_increment,\n",
     "                                    target_rate, rate_spread, max_increment=MAX_TIME_INCREMENT, mi_based=False, visualize=visualize)\n",
     "        elif function_name == \"desp\":\n",
-    "            W, state_history = run_desp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, weight_increment,\n",
-    "                        min_variance, max_variance, max_increment=MAX_TIME_INCREMENT, mi_based=True, n_jobs = 12, visualize=visualize)\n",
+    "            W, state_history, _ = run_desp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, weight_increment,\n",
+    "                        min_variance, max_variance, max_increment=MAX_TIME_INCREMENT, mi_based=True, n_jobs = 1, visualize=visualize)\n",
     "        else:\n",
     "            raise ValueError(f\"Invalid function: {function}\")\n",
     "        \n",
@@ -869,13 +886,13 @@
     "\n",
     "        if is_instances_classification:\n",
     "            reservoir_hadsp_multi, readout_hadsp_multi = init_and_train_model_for_classification(W_hadsp_multi, np.diag(Win_hadsp_multi.A.T[0]), bias_hadsp_multi, leaky_rate, activation_function, train_data_multi, Y_train, N_JOBS, RIDGE_COEF, mode=\"sequence-to-vector\")\n",
-    "            Y_pred_hadsp_multi = predict_model_for_classification(reservoir_hadsp_multi, readout_hadsp_multi, test_data_multi, N_JOBS)\n",
-    "            score = compute_score(Y_pred_hadsp_multi, Y_test, is_instances_classification)\n",
+    "            Y_pred = predict_model_for_classification(reservoir_hadsp_multi, readout_hadsp_multi, test_data_multi, N_JOBS)\n",
+    "            score = compute_score(Y_pred, Y_test, is_instances_classification)\n",
     "        else:\n",
     "            esn_hadsp_multi = init_and_train_model_for_prediction(W_hadsp_multi, np.diag(Win_hadsp_multi.A.T[0]), bias_hadsp_multi, leaky_rate, activation_function, train_data_multi, Y_train, RIDGE_COEF)\n",
-    "            Y_pred_hadsp_multi =  esn_hadsp_multi.run(test_data_multi, reset=False)\n",
+    "            Y_pred =  esn_hadsp_multi.run(test_data_multi, reset=False)\n",
     "        \n",
-    "            score = compute_score(Y_pred_hadsp_multi, Y_test, is_instances_classification)\n",
+    "            score = compute_score(Y_pred, Y_test, is_instances_classification)\n",
     "\n",
     "        total_score += score\n",
     "\n",
@@ -894,20 +911,33 @@
    "outputs": [],
    "source": [
     "import optuna\n",
-    "import wandb\n",
-    "from optuna.integration.wandb import WeightsAndBiasesCallback\n",
     "from optuna.samplers import TPESampler\n",
+    "import re\n",
+    "\n",
+    "def camel_to_snake(name):\n",
+    "    str1 = re.sub('(.)([A-Z][a-z]+)', r'\\1_\\2', name)\n",
+    "    return re.sub('([a-z0-9])([A-Z])', r'\\1_\\2', str1).lower()\n",
     "\n",
     "storage = optuna.storages.RDBStorage(\n",
-    "    url=\"sqlite:///optuna_hadsp_db.sqlite3\",\n",
+    "    url=\"sqlite:///optuna_\" + camel_to_snake(dataset_name) + \"_db.sqlite3\",\n",
     "    engine_kwargs={\"pool_size\": 20, \"connect_args\": {\"timeout\": 10}},\n",
     ")\n",
-    "study_name = function_name + \"_\" + dataset_name\n",
+    "study_name = function_name + \"_\" + dataset_name + \"_\" + data_type\n",
     "direction = \"maximize\" if is_instances_classification else \"minimize\"\n",
     "sampler = TPESampler()\n",
     "\n",
-    "study = optuna.create_study(storage, sampler, study_name=study_name, direction=direction, load_if_exists=True)\n",
-    "study.optimize(objective, n_trials=400, callbacks=[])"
+    "def optimize_study(n_trials):\n",
+    "    study = optuna.create_study(storage=storage, sampler=sampler, study_name=study_name, direction=direction, load_if_exists=True)\n",
+    "    study.optimize(objective, n_trials=n_trials)\n",
+    "\n",
+    "N_TRIALS = 400\n",
+    "n_jobs = 10\n",
+    "trials_per_process = N_TRIALS // n_jobs\n",
+    "\n",
+    "# Use joblib to parallelize the optimization\n",
+    "Parallel(n_jobs=n_jobs)(\n",
+    "    delayed(optimize_study)(trials_per_process) for _ in range(n_jobs)\n",
+    ")\n"
    ]
   },
   {
@@ -916,18 +946,6 @@
    "metadata": {},
    "source": [
     "## Random matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cfb47835-196c-4e38-a379-4cc17368a55b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the best parameters\n",
-    "best_params = study.best_params\n",
-    "print(\"Best parameters: \", best_params)"
    ]
   },
   {
@@ -942,7 +960,7 @@
     "from reservoir.reservoir import init_matrices\n",
     "from connexion_generation.bounded_hadsp import run_hadsp_algorithm\n",
     "from connexion_generation.utility import TwoDimArrayWrapper\n",
-    "from performances.esn_model_evaluation import init_and_train_model_for_classification\n",
+    "from performances.esn_model_evaluation import init_and_train_model_for_prediction\n",
     "\n",
     "N_JOBS = -1\n",
     "\n",
@@ -951,7 +969,7 @@
     "    input_scaling = trial.suggest_float('input_scaling', 0.01, 1.0, step=0.01)\n",
     "    bias_scaling = trial.suggest_float('bias_scaling', 0, 1, step=0.05)\n",
     "    leaky_rate = trial.suggest_float('leaky_rate', 1, 1)\n",
-    "    connectivity = trial.suggest_float('connectivity', 0, 0)\n",
+    "    connectivity = trial.suggest_float('connectivity', 0, 1)\n",
     "    input_connectivity = trial.suggest_float('input_connectivity', 1, 1)\n",
     "    network_size = trial.suggest_float('network_size', RESERVOIR_SIZE, RESERVOIR_SIZE)\n",
     "    sr = trial.suggest_float('spectral_radius', 0.4, 1.6, step=0.01)\n",
@@ -961,7 +979,7 @@
     "\n",
     "    pretrain_data_multi = X_pretrain_multi\n",
     "    train_data_multi = X_train_band_duplicated # X_train_band_noisy_duplicated or X_train_band_duplicated\n",
-    "    test_data_multi = X_test_band_noisy_duplicated # X_test_band_noisy_duplicated or X_test_band_duplicated\n",
+    "    test_data_multi = X_test_band_noisy_duplicated if data_type == \"noisy\" else X_test_band_duplicated\n",
     "\n",
     "    \n",
     "    total_score = 0\n",
@@ -975,13 +993,13 @@
     "\n",
     "        if is_instances_classification:\n",
     "            reservoir_random_multi, readout_random_multi = init_and_train_model_for_classification(W_random_multi, np.diag(Win_random_multi.A.T[0]), bias_random_multi, leaky_rate, activation_function, train_data_multi, Y_train, N_JOBS, RIDGE_COEF, mode=\"sequence-to-vector\")\n",
-    "            Y_pred_random_multi = predict_model_for_classification(reservoir_random_multi, readout_random_multi, test_data_multi, N_JOBS)\n",
-    "            score = compute_score(Y_pred_random_multi, Y_test)\n",
+    "            Y_pred = predict_model_for_classification(reservoir_random_multi, readout_random_multi, test_data_multi, N_JOBS)\n",
+    "            score = compute_score(Y_pred, Y_test, is_instances_classification)\n",
     "        else:\n",
     "            esn_random_multi = init_and_train_model_for_prediction(W_random_multi, np.diag(Win_random_multi.A.T[0]), bias_random_multi, leaky_rate, activation_function, train_data_multi, Y_train, RIDGE_COEF)\n",
-    "            Y_pred_random_multi =  esn_random_multi.run(test_data_multi, reset=False)\n",
+    "            Y_pred =  esn_random_multi.run(test_data_multi, reset=False)\n",
     "        \n",
-    "            score = compute_score(Y_pred_hadsp_multi, Y_test, is_instances_classification)\n",
+    "            score = compute_score(Y_pred, Y_test, is_instances_classification)\n",
     "\n",
     "        total_score += score\n",
     "        \n",
@@ -1001,79 +1019,101 @@
    "outputs": [],
    "source": [
     "import optuna\n",
-    "import wandb\n",
-    "from optuna.integration.wandb import WeightsAndBiasesCallback\n",
+    "from optuna.samplers import TPESampler\n",
+    "import re\n",
     "\n",
-    "# pas utilisé là\n",
+    "def camel_to_snake(name):\n",
+    "    str1 = re.sub('(.)([A-Z][a-z]+)', r'\\1_\\2', name)\n",
+    "    return re.sub('([a-z0-9])([A-Z])', r'\\1_\\2', str1).lower()\n",
+    "\n",
     "storage = optuna.storages.RDBStorage(\n",
-    "    url=\"sqlite:///optuna_hadsp_db.sqlite3\",\n",
+    "    url=\"sqlite:///optuna_\" + camel_to_snake(dataset_name) + \"_db.sqlite3\",\n",
     "    engine_kwargs={\"pool_size\": 20, \"connect_args\": {\"timeout\": 10}},\n",
     ")\n",
-    "# visualise with command optuna-dashboard sqlite:///example-study.db\n",
-    "\n",
-    "# Create a study object and specify the direction as 'maximize'.\n",
-    "study_name = \"random_\" + dataset_name\n",
+    "study_name = \"random_\" + dataset_name + \"_\" + data_type\n",
     "direction = \"maximize\" if is_instances_classification else \"minimize\"\n",
     "sampler = TPESampler()\n",
     "\n",
-    "study = optuna.create_study(storage, sampler, study_name=study_name, direction=direction, load_if_exists=True)\n",
     "\n",
-    "# Optimize the study, the number of trials can be set as per computational resources.\n",
-    "study.optimize(objective, n_trials=400, callbacks=[])"
+    "def optimize_study(n_trials):\n",
+    "    study = optuna.create_study(storage, sampler, study_name=study_name, direction=direction, load_if_exists=True)\n",
+    "    study.optimize(objective, n_trials=n_trials)\n",
+    "\n",
+    "\n",
+    "N_TRIALS = 400\n",
+    "n_jobs = 10\n",
+    "trials_per_process = N_TRIALS // n_jobs\n",
+    "\n",
+    "# Use joblib to parallelize the optimization\n",
+    "Parallel(n_jobs=n_jobs)(\n",
+    "    delayed(optimize_study)(trials_per_process) for _ in range(n_jobs)\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afea5f7c-4fda-4977-b27a-be04731e9677",
+   "metadata": {},
+   "source": [
+    "# Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e355b9b7-6625-47be-8a7e-8d388448e85b",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "## Mackey Glass\n",
+    "### Ridge parameter\n",
+    "| Dataset     | Algorithm | test   | Curve shape | Best value |\n",
+    "|-------------|-----------|--------|-------------|------------|\n",
+    "| MackeyGlass | DESP      | normal | no extremum | 10         |\n",
+    "| MackeyGlass | HADSP     | normal | no extremum | 9,10       |\n",
+    "| MackeyGlass | random    | normal | no extremum | 9,10       |\n",
+    "| MackeyGlass | DESP      | noisy  | bell        | 7          |\n",
+    "| MackeyGlass | HADSP     | noisy  | bell        | 6          |\n",
+    "| MackeyGlass | random    | noisy  | no extremum | 10         |\n",
+    "\n",
+    "### Results, no validation/test\n",
+    "\n",
+    "|           |  HADSP |  DESP  | random |\n",
+    "|-----------|--------|--------|--------|\n",
+    "|  normal   | 0.0399 | 0.0379 | 0.0446 |\n",
+    "|  noisy    | 0.119  | 0.109  | 0.104  | \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9cf04a0-7ee8-44fd-a8e0-cbf632a9a2c9",
+   "metadata": {},
+   "source": [
+    "## Japanese vowels\n",
+    "\n",
+    "### Ridge parameter\n",
+    "\n",
+    "| Dataset        | Algorithm | test   | Curve shape | Best value |\n",
+    "|----------------|-----------|--------|-------------|------------|\n",
+    "| JapaneseVowels | DESP      | normal | bell        | 2          |\n",
+    "| JapaneseVowels | HADSP     | normal | bell        | 4          |\n",
+    "| JapaneseVowels | random    | normal | bell        | 4          |\n",
+    "| JapaneseVowels | DESP      | noisy  | bell        | 2          |\n",
+    "| JapaneseVowels | HADSP     | noisy  | bell        | 5          |\n",
+    "| JapaneseVowels | random    | noisy  | bell        | 5          |\n",
+    "\n",
+    "### Results, no validation/test\n",
+    "\n",
+    "|           |  HADSP |  DESP  | random |\n",
+    "|-----------|--------|--------|--------|\n",
+    "|  normal   | 0.641  | 0.649  | 0.612  |\n",
+    "|  noisy    | 0.621  | 0.623  | 0.610  | "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f362ac0-dcdd-47e0-8404-8470506ea553",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cab46d32-c1e7-471e-983d-c89ad09982a6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e51a79d9-5224-420b-92fe-ebf2e89a8c26",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "49ee3d4e-e3c6-43fd-9ef8-cf41c858ebac",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45f5aae7-8fd4-462b-8c56-0d9bc69d4911",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ea427e9-10a4-4f49-b76f-e97b45638ed7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6db9bd5f-8eed-4010-9338-05845d4752c3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1095,7 +1135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
